--- a/eas.json
+++ b/eas.json
@@ -7,17 +7,11 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-
-      },
       "ios": {
         "image": "latest"
       }
-
-
-
     },
+
     "development-simulator": {
       "extends": "development",
       "ios": {
@@ -38,6 +32,7 @@
       "channel": "production",
       "autoIncrement": true,
       "android": {
+        "buildType": "app-bundle",
         "image": "latest"
       },
       "ios": {
