--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app-andrew",
+  "name": "sandoctor",
   "license": "0BSD",
   "main": "expo-router/entry",
   "version": "52.0.53",
@@ -23,26 +23,26 @@
     "@types/btoa": "^1.2.5",
     "btoa": "^1.2.1",
     "buffer": "^6.0.3",
-    "expo": "~52.0.23",
-    "expo-blur": "~14.0.1",
+    "expo": "~52.0.25",
+    "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.8",
+    "expo-dev-client": "~5.0.9",
     "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-insights": "~0.8.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-updates": "~0.26.10",
-    "expo-web-browser": "~14.0.1",
+    "expo-haptics": "~14.0.1",
+    "expo-insights": "~0.8.2",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.16",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-updates": "~0.26.12",
+    "expo-web-browser": "~14.0.2",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -51,7 +51,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-navigation-bar": "~4.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -59,7 +60,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   }
