--- a/package.json
+++ b/package.json
@@ -23,23 +23,24 @@
     "@types/btoa": "^1.2.5",
     "btoa": "^1.2.1",
     "buffer": "^6.0.3",
-    "expo": "~52.0.25",
-    "expo-blur": "~14.0.2",
+    "date-fns": "^4.1.0",
+    "expo": "~52.0.26",
+    "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.9",
+    "expo-dev-client": "~5.0.10",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.1",
     "expo-insights": "~0.8.2",
     "expo-linking": "~7.0.4",
-    "expo-router": "~4.0.16",
+    "expo-navigation-bar": "~4.0.7",
+    "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.20",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
-    "expo-updates": "~0.26.12",
+    "expo-updates": "~0.26.13",
     "expo-web-browser": "~14.0.2",
-    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
@@ -51,8 +52,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-navigation-bar": "~4.0.7"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
