--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "expo-dev-client": "~5.0.11",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-insights": "~0.8.2",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
     "expo-navigation-bar": "~4.0.8",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.21",
