--- a/package.json
+++ b/package.json
@@ -24,44 +24,50 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@types/btoa": "^1.2.5",
     "btoa": "^1.2.1",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.36",
+    "expo": "~52.0.41",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.12",
+    "expo-dev-client": "~5.0.14",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.7",
     "expo-image-picker": "~16.0.6",
     "expo-insights": "~0.8.2",
     "expo-linking": "~7.0.5",
     "expo-media-library": "~17.0.6",
     "expo-navigation-bar": "~4.0.8",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
-    "expo-updates": "~0.27.1",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
-    "flatted": "^3.3.2",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-avoid-softinput": "^7.0.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.16.7",
+    "react-native-mask-input": "^1.2.3",
     "react-native-mmkv": "^3.2.0",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
@@ -71,8 +77,7 @@
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-camera": "~16.0.18",
-    "expo-image": "~2.0.6"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -80,8 +85,10 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.5",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1"
   }
 }
