--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.14",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.1",
@@ -77,7 +77,9 @@
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-notifications": "~0.29.14",
+    "expo-device": "~7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
