Доработан переход по вкладкам по QR. Добавлен и доработан переход по клику на телефон и email. Исправлена заглавная Й на й

--- a/app.json
+++ b/app.json
@@ -23,8 +23,9 @@
       },
       "package": "com.andrewandersonorg.myappandrew",
       "permissions": [
-        "android.permission.CAMERA",
-        "android.permission.CAMERA"
+        "CAMERA",
+
+        "CALL_PHONE"
       ]
     },
     "web": {
