--- a/app.json
+++ b/app.json
@@ -10,21 +10,28 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.andrewandersonorg.myappandrew",
+      "bundleIdentifier": "com.andrewandersonorg.sandoctor",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
       "softwareKeyboardLayoutMode": "resize",
+      "googleServicesFile": "./google-services.json",
+
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.andrewandersonorg.myappandrew",
+
+      "notification": {
+        "icon": "./assets/images/notification-icon.png",
+        "color": "#081A51"
+      },
+
+      "package": "com.andrewandersonorg.sandoctor",
       "permissions": [
         "CAMERA",
-
         "CALL_PHONE"
       ]
     },
@@ -44,8 +51,14 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-secure-store",
-      "expo-barcode-scanner"
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/notification-icon.png",
+          "color": "#081A51"
+        }
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
