--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.andrewandersonorg.sandoctor",
@@ -22,6 +22,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+
+      "notification": {
+        "icon": "./assets/images/notification-icon.png",
+        "color": "#081A51"
       },
 
       "package": "com.andrewandersonorg.sandoctor",
