--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "expo-media-library": "~17.0.6",
     "expo-navigation-bar": "~4.0.9",
     "expo-notifications": "~0.29.14",
-    "expo-router": "~4.0.21",
+    "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -71,6 +71,7 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-mmkv": "^3.2.0",
     "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
