1. Загрузчик фотографий или файлов как в аватарке 2. Если задание в статусах "у исполнителя", "в работе" и др,  то скрываем на странице внутри задания вкладки "чек-лист" и "отчет" их показываем только в заданиях в статусе "выполнено".  Кроме этого вкладку "чек-лист" скрываем и в заданиях со статусом "выполнена" но при условии, что в чек-листе пусто. Как пример: задание от 8.05 (Гаврилова АА) оно выполнено, там чек-листа нет, но вкладка есть, ее нужно скрыть. В то же время нужно протестировать чтобы вкладка не исчезла в заданиях где она должна быть. Например в задании от 05.05 (УК Арт Лоджистик) оно то же выполнено, но там есть что показать в чек листах. А задании 29.04 на Метро Кэш Энд Керри (Лобня) вкладки "чек-лист" и "отчет" должны быть скрыты, так как задание в статусе "в работе". Вот. 3. Нам нужно скрыть контакты в уже выполненных или отмененных заданиях 5 Выбранный режим отображения (день, месяц) в календаре подсвечивать на кнопках 6 В календаре при выходе из выбранного задания должен отображаться тот же режим календаря, из которого перешел в задание заменен логотип

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "sandoctor",
     "version": "1.0.5",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon-1.5.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -20,12 +20,12 @@
       "googleServicesFile": "./google-services.json",
 
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/adaptive-icon-1.5.png",
         "backgroundColor": "#ffffff"
       },
 
       "notification": {
-        "icon": "./assets/images/notification-icon.png",
+        "icon": "./assets/images/notification-icon-1.5.png",
         "color": "#081A51"
       },
 
@@ -45,7 +45,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/splash-icon-1.5.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
@@ -54,7 +54,7 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/images/notification-icon.png",
+          "icon": "./assets/images/notification-icon-1.5.png",
           "color": "#081A51"
         }
       ],
