--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "android": "DARK_MODE=media expo run:android",
+    "ios": "DARK_MODE=media expo run:ios",
+    "web": "DARK_MODE=media expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
@@ -24,8 +24,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.9.0",
+    "@gluestack-ui/icon": "^0.1.27",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/toast": "^1.0.9",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/elements": "^2.3.8",
@@ -34,6 +38,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/btoa": "^1.2.5",
+    "babel-plugin-module-resolver": "^5.0.2",
     "btoa": "^1.2.1",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
@@ -42,17 +47,18 @@
     "expo-camera": "~16.1.6",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.1.8",
-    "expo-device": "~7.0.3",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
-    "expo-insights": "~0.8.2",
+    "expo-image-picker": "~16.1.4",
+    "expo-insights": "~0.9.3",
     "expo-linking": "~7.1.5",
-    "expo-media-library": "~17.0.6",
-    "expo-navigation-bar": "~4.0.9",
-    "expo-notifications": "~0.29.14",
+    "expo-media-library": "~17.1.6",
+    "expo-navigation-bar": "~4.2.4",
+    "expo-notifications": "~0.31.2",
     "expo-router": "~5.0.6",
-    "expo-secure-store": "~14.0.1",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
@@ -60,10 +66,12 @@
     "expo-updates": "~0.28.13",
     "expo-web-browser": "~14.1.6",
     "formik": "^2.4.6",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-avoid-softinput": "^7.0.1",
+    "react-native-css-interop": "^0.1.22",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
@@ -73,14 +81,14 @@
     "react-native-mmkv": "^3.2.0",
     "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
-    "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.8.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "yup": "^1.6.1",
-    "expo-image-picker": "~16.1.4",
-    "react-native-safe-area-context": "5.4.0"
+    "tailwindcss": "^3.4.17",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -90,7 +98,8 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.5",
+    "jscodeshift": "^0.15.2",
     "typescript": "~5.8.3"
   }
 }
