--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "yup": "^1.6.1",
-    "@react-native-community/netinfo": "11.4.1"
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/slider": "4.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
