--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@gluestack-ui/button": "^1.0.14",
     "@gluestack-ui/icon": "^0.1.27",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/toast": "^1.0.9",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/slider": "4.5.6",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/elements": "^2.3.8",
@@ -42,34 +45,35 @@
     "btoa": "^1.2.1",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.9",
-    "expo-blur": "~14.1.4",
-    "expo-camera": "~16.1.6",
+    "expo": "53.0.20",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.6",
-    "expo-dev-client": "~5.1.8",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-insights": "~0.9.3",
-    "expo-linking": "~7.1.5",
-    "expo-media-library": "~17.1.6",
-    "expo-navigation-bar": "~4.2.4",
-    "expo-notifications": "~0.31.2",
-    "expo-router": "~5.0.6",
+    "expo-linking": "~7.1.7",
+    "expo-media-library": "~17.1.7",
+    "expo-navigation-bar": "~4.2.7",
+    "expo-notifications": "~0.31.4",
+    "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
-    "expo-updates": "~0.28.13",
-    "expo-web-browser": "~14.1.6",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
+    "expo-web-browser": "~14.2.0",
     "formik": "^2.4.6",
+    "lucide-react-native": "^0.536.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-avoid-softinput": "^7.0.1",
     "react-native-css-interop": "^0.1.22",
     "react-native-dropdown-picker": "^5.4.6",
@@ -88,9 +92,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
-    "yup": "^1.6.1",
-    "@react-native-community/netinfo": "11.4.1",
-    "@react-native-community/slider": "4.5.6"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -100,7 +102,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
+    "jest-expo": "~53.0.9",
     "jscodeshift": "^0.15.2",
     "typescript": "~5.8.3"
   }
